# fastapi-word-frequency

./: .dockerignore  APIRouter.py  Dockerfile  README  main.py  makefile  pyproject.toml  settings.py
dependencies/: text_report_dependencies.py
exception/: bad_request_exception.py  base_exception.py  internal_server_exception.py
router/: text_report_router.py
service/: text_report_service.py
tests/: conftest.py
tests/dependencies/: test_text_report_dependencies.py
tests/exception/: test_exceptions.py
tests/fixture/: process_file_task.py  text_report_router.py  text_report_service.py
tests/router/: test_text_report_router.py
tests/service/: test_text_report_service.py
tests/utils/: test_cleanup_files.py  test_process_file_task.py
utils/: cleanup_files.py  process_file_task.py
