[project]
name = "fastapi-word-frequency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "pymorphy3>=2.0.6",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "xlsxwriter>=3.2.9",
]
