[project]
name = "fastapi-word-frequency"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "pymorphy3>=2.0.6",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "xlsxwriter>=3.2.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
